[gd_scene load_steps=15 format=3 uid="uid://dg5v0g3f35g0v"]

[ext_resource type="Script" uid="uid://dxpivnm0juu5d" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://c8jhmim2ogdpn" path="res://assets/sprites/enimem_left.png" id="2_5uy6h"]
[ext_resource type="PackedScene" uid="uid://bns2rmbjydkdo" path="res://scenes/hurtbox.tscn" id="3_4ra3w"]
[ext_resource type="Texture2D" uid="uid://b6m26ol44cl8f" path="res://assets/sprites/enminem.png" id="3_c4w8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("2_5uy6h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("2_5uy6h")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("2_5uy6h")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("2_5uy6h")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("3_c4w8v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("3_c4w8v")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("3_c4w8v")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("3_c4w8v")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_j0cyh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5uy6h"]
radius = 15.0
height = 54.0

[node name="enemy" type="Node2D"]
script = ExtResource("1_md0e3")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -28.999998)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_j0cyh")
animation = &"Left"

[node name="movement_ray_cast" type="Node2D" parent="Sprite2D"]

[node name="hurtbox" parent="." groups=["hurtbox"] instance=ExtResource("3_4ra3w")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -29)
shape = SubResource("CapsuleShape2D_5uy6h")

[node name="RayCast_left" type="RayCast2D" parent="."]
position = Vector2(0, -29)
target_position = Vector2(-20, 1)

[node name="RayCast_right" type="RayCast2D" parent="."]
position = Vector2(0, -29)
target_position = Vector2(20, 0)

[node name="RayCast_bottom_left" type="RayCast2D" parent="."]
position = Vector2(-20, -28)
target_position = Vector2(0, 30)

[node name="RayCast_bottom_right" type="RayCast2D" parent="."]
position = Vector2(20, -29)
target_position = Vector2(0, 31)

[node name="aggro_ray_cast" type="Node2D" parent="."]
position = Vector2(0, -28.999998)
scale = Vector2(0.28124997, 0.453125)

[node name="ray_casts_right" type="Node2D" parent="aggro_ray_cast"]
scale = Vector2(0.99999994, 0.99999994)

[node name="RayCast_right_aggro" type="RayCast2D" parent="aggro_ray_cast/ray_casts_right"]
position = Vector2(0, 41.931026)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(100, 0)
collision_mask = 2

[node name="RayCast_right_aggro2" type="RayCast2D" parent="aggro_ray_cast/ray_casts_right"]
position = Vector2(0, 19.862064)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(100, 0)
collision_mask = 2

[node name="RayCast_right_aggro3" type="RayCast2D" parent="aggro_ray_cast/ray_casts_right"]
position = Vector2(0, -2.2068977)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(100, 0)
collision_mask = 2

[node name="RayCast_right_aggro4" type="RayCast2D" parent="aggro_ray_cast/ray_casts_right"]
position = Vector2(0, -24.27586)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(100, 0)
collision_mask = 2

[node name="RayCast_right_aggro5" type="RayCast2D" parent="aggro_ray_cast/ray_casts_right"]
position = Vector2(0, -46.34483)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(100, 0)
collision_mask = 2

[node name="ray_casts_left" type="Node2D" parent="aggro_ray_cast"]
scale = Vector2(0.99999994, 0.99999994)

[node name="RayCast_left_aggro" type="RayCast2D" parent="aggro_ray_cast/ray_casts_left"]
position = Vector2(0, 41.931026)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(-100, 0)
collision_mask = 2

[node name="RayCast_left_aggro2" type="RayCast2D" parent="aggro_ray_cast/ray_casts_left"]
position = Vector2(0, 19.862064)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(-100, 0)
collision_mask = 2

[node name="RayCast_left_aggro3" type="RayCast2D" parent="aggro_ray_cast/ray_casts_left"]
position = Vector2(0, -2.2068977)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(-100, 0)
collision_mask = 2

[node name="RayCast_left_aggro4" type="RayCast2D" parent="aggro_ray_cast/ray_casts_left"]
position = Vector2(0, -24.27586)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(-100, 0)
collision_mask = 2

[node name="RayCast_left_aggro5" type="RayCast2D" parent="aggro_ray_cast/ray_casts_left"]
position = Vector2(0, -46.34483)
scale = Vector2(3.555555, 2.206896)
target_position = Vector2(-100, 0)
collision_mask = 2
